# secure-pdf-manager

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AiAssistent.tsx  DropZone.tsx  PDFThumbnail.tsx  SaveModal.tsx  SignaturePad.tsx
src/features/: Compressor.tsx  Editor.tsx  ImageToPdf.tsx  Merger.tsx  Protector.tsx  Signer.tsx
src/utils/: pdfRenderer.ts
